--- a/cryptoprice-dash.html
+++ b/cryptoprice-dash.html
@@ -1,5 +1,10 @@
 <link rel="import" href="bower_components/polymer/polymer-element.html">
 <link rel="import" href="bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="bower_components/paper-spinner/paper-spinner-lite.html">
+<link rel="import" href="bower_components/paper-button/paper-button.html">
+
+<script src="bower_components/chart.js/dist/Chart.js"></script>
+<script src="bower_components/moment/min/moment.min.js"></script>
 
 <dom-module id="cryptoprice-dash">
     <template>
@@ -7,9 +12,23 @@
         <iron-ajax
             id="coinbase"            
             handle-as="json"
-            on-response="_handleResponse">
-        </iron-ajax>
-    </template>
+            on-response="_handleResponse"
+            loading="{{loading}}">
+        </iron-ajax>        
+        <paper-spinner-lite active="[[loading]]" class = "orange"></paper-spinner-lite>
+        <div hidden$="[[loading]]" style="display: flex; justify-content: center; margin-bottom: 20px;">
+            <template is="dom-repeat" items="[[currencies]]">
+                    <paper-button toggles raised 
+                                  on-click="_getCurrencyHistoricData"
+                                  data-item$="[[item.code]]"> 
+                        [[item.name]] - $[[item.price]]
+                    </paper-button>
+            </template>        
+        </div>
+        <div hidden$=[[loading]] style="width: 100%; max-width: 700px; margin:0 auto">
+            <canvas height="2" width="4" id="canvas"></canvas>
+        </div>
+    </template> 
 
     <script>
         class CryptopriceDash extends Polymer.Element {
@@ -21,18 +40,27 @@
                         value: [
                             {
                                 code: 'BTC',
-                                name: 'Bitcoin'
+                                name: 'Bitcoin',
+                                price: 0
                             },
                             {
                                 code: 'ETH',
-                                name: 'Etherium'
+                                name: 'Etherium',
+                                price: 0
                             },
                             {
                                 code: 'LTC',
-                                name: 'Litecoin'
+                                name: 'Litecoin',
+                                price: 0
                             }
                         ]
-                    }
+                    },
+                    loading: {
+                        type: Boolean,
+                        notify: true,
+                        value: false
+                    },
+                    lineChart: {}
                 }
             }
 
@@ -40,21 +68,97 @@
                 super.ready();
                 Polymer.RenderStatus.afterNextRender(this, () => {
                     this._getCurrencyData();
+                    this._getCurrencyHistoricData(this.currencies[0].code);
                 });
             }
 
             _getCurrencyData(){
                 var ajax = this.$.coinbase;
-                var correncies = this.currencies;
+                var currencies = this.currencies;
 
-                correncies.map(curr => {
+                currencies.map(curr => {
                     ajax.url = 'https://api.coinbase.com/v2/prices/' + curr.code + "-USD/spot";
                     ajax.generateRequest();
                 })
             }
 
             _handleResponse(res){
-                console.log(res);
+                if(res.detail.url.indexOf('historic') === -1)
+                    this._computeCurrencyPrice(res.detail);
+                else{
+                    this._computeGraph(res.detail);
+                }
+            }
+
+            _getCurrencyHistoricData(currency){      
+                if(event !== undefined){
+                    currency = event.target.dataset.item;
+                }
+                var ajax = this.$.coinbase;
+                ajax.url = `https://api.coinbase.com/v2/prices/${currency}-USD/historic?period=week`;
+                ajax.generateRequest();                
+            }
+
+            _computeCurrencyPrice(data){
+                const currencyCode = data.url.substring(35, 38);
+                const currencyIndex = this.currencies.findIndex((curr) => { 
+                    return (curr.code === currencyCode);
+                })
+
+                this.set(`currencies.${currencyIndex}.price`, data.response.data.amount);
+            }
+
+            _computeGraph(data){                
+                const code = data.url.substring(35, 38);
+                const times = [];
+                const prices = [];
+                data.response.data.prices.map(price => {
+                    times.unshift(moment(price.time).format('MM/DD/YYYY, h:mm:ss a'));
+                    prices.unshift(price.price);                    
+                })                
+                this._generateLineChart(times, prices, code);
+            }
+
+            _generateLineChart(times, prices, labelName){
+                if(this.lineChart !== undefined)
+                    this.lineChart.destroy();  
+
+                const ctx = this.$.canvas.getContext('2d');
+                this.lineChart = new Chart(ctx, {
+                    type: 'line',
+                    data: {
+                        labels: times,
+                        datasets: [
+                            {
+                                pointRadius: 0,
+                                label: labelName,
+                                backgroundColor: "rgba(111, 124, 186, 0.1)",
+                                borderColor: "rgba(111, 124, 186, 1)",
+                                borderWidth: 2,
+                                data: prices
+                            }
+                        ]
+                    },
+                    options: {
+                        animation: false,
+                        tooltips: {
+                            mode: 'index',
+                            intersect: false
+                        },
+                        scales:{
+                            xAxes:[{
+                                gridLines: {
+                                    display: false
+                                }
+                            }],
+                            yAxes: [{
+                                gridLines: {
+                                    display: false
+                                }
+                            }]
+                        }
+                    }
+                });
             }
         }
 
